--- a/style.css
+++ b/style.css
@@ -25,19 +25,21 @@ body {
 
 .flover {
     margin-top: 50px;
-    height: 350px;
+    height: 400px;
 }
 
 .heart {
-    height: 200px;
+    height: 300px;
 }
 
 h2 {
     color: white;
+    font-size: 2em;
 }
 
 p {
     color: white;
+    font-size: 20px;
 }
 
 
@@ -47,7 +49,7 @@ p {
     position: relative;
     justify-content: center;
     align-items: center;
-
+    height: 200px;
 }
 
 h1 {
@@ -63,8 +65,8 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     border-radius: 10px;
     cursor: pointer;
     border: none;
